<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.drawapp.MainActivity" >
    
	
	
	<item android:id="@+id/action_draw"
          android:icon="@drawable/ic_action_draw"
          android:title="@string/action_draw"
          android:showAsAction="always"  />
	
	<item android:id="@+id/action_color_change"
          android:icon="@drawable/black"
          android:title="@string/action_color_change"
          android:showAsAction="always"  />
	
	<item android:id="@+id/action_resize_brush"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_resize_brush"
          android:showAsAction="always"  />
	
	<item android:id="@+id/action_erase"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_erase"
          android:showAsAction="always"  />
	
	<item android:id="@+id/action_undo"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_undo"
          android:showAsAction="ifRoom"  />
	
	<item android:id="@+id/action_redo"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_redo"
          android:showAsAction="ifRoom"  />
	
	<item android:id="@+id/action_share"
          android:icon="@drawable/ic_action_share"
          android:title="@string/action_share"
          android:showAsAction="ifRoom"  />
	
	<item android:id="@+id/action_save"
          android:icon="@drawable/ic_action_save"
          android:title="@string/action_save"
          android:showAsAction="ifRoom"  />
	
	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

		
</menu>
